# cs-docker-tools

columnar/: Columnstore.xml  Columnstore_12.xml  docker-compose.yml
columnar/Docker/coldev/: Dockerfile
columnar/Docker/coldev-centos/: .gdbinit  Dockerfile
columnar/Docker/coldev-centos6/: Dockerfile
columnar/Docker/coldev-deb/: .gdbinit  Dockerfile
columnar/Docker/coldev-deb8/: Dockerfile
columnar/Docker/coldev-deb9/: .vimrc  Dockerfile
columnar/Docker/coldev-ubuntu/: Dockerfile
columnar/Docker/coldev-ubuntu18/: Dockerfile
columnar/Docker/coldev-ubuntu20/: .gdbinit  .vimrc  Dockerfile
columnar/Docker/coldev-ubuntu22/: .gdbinit  Dockerfile
columnar/Docker/enc/: Dockerfile
generator/: CMakeLists.txt  edx-io.c  edx-io.h  em_generator.cpp  generator.c
shells/: BRM_cont.sh  BRM_work.sh  BRM_work.shp  bootstrap_mcs  bootstrap_mcs.sh  cherry-pick-last-commit.sh  contexec.sh  ddlproc_gdb.sh  dmlproc_gdb.sh  exemgr_gdb.sh  idle.sh  mysqld_gdb.sh  pmp.sh  primproc_gdb.sh  procmgr_gdb.sh  procmon_gdb.sh  restartcs  run_cs_15  run_cs_5  run_cs_with_oam_skiped  run_cs_wo_oam_12  run_mcs  sc_grep.sh  sreinstall  sreinstall_15  sreinstall_5  startcs  startcs_12  startcs_15  startcs_cloud.sh  stopcs  stopcs_15  stopcs_cloud.sh  stopmcs  writeengine.sh
slapit/: 4564.lua  qs1.lua  qs_gb_int.lua  qs_gb_varchar.lua  slap1.lua  slap1.sql  slap2.sql  slap3.sql  slap4.lua  slap4.sql  slap5.lua  slap5.sql  slap6.lua  slap6.sql  slap_h1_1.lua  slap_h1_2.lua  slap_sub_with_agg.sh  slap_tester.sh  slap_with_agg.sh  slapmultiple.sh  sysbench_series.sh  sysbench_wrapper.sh
(+6 files in other folders)
